# differentiable-triangulations

./: CMakeLists.txt  README.md  estimateErrorEnergy.hpp  flip_utils.cpp  flip_utils.hpp  globals.cpp  globals.hpp  main.cpp  stb_image.cpp  types.hpp  visualization_utils.cpp  visualization_utils.hpp
libs/TinyAD/: CMakeLists.txt  README.md
libs/TinyAD/include/TinyAD/: Scalar.hh  ScalarFunction.hh
libs/TinyAD/include/TinyAD/Detail/: EvalSettings.hh  ScalarFunctionImpl.hh  ScalarObjectiveTerm.hh  VectorFunctionImpl.hh  VectorObjectiveTerm.hh
libs/TinyAD/include/TinyAD/Utils/: HessianProjection.hh
libs/TinyAD/tests/: ComplexTest.cc  EigenTest.cc  ElementTest.cc  GaussNewtonTest.cc  HandleTypeTest.cc  Meshes.hh  NewtonTest.cc  OpenMPTest.cc  PerformanceTest.cc  SVDTest.cc  ScalarFunctionTest.cc  ScalarTestBinaryOperators.cc  ScalarTestComparison.cc  ScalarTestConstructors.cc  ScalarTestMisc.cc  ScalarTestUnaryOperators.cc  SwitchSolverTest.cc  VectorFunctionTest.cc
